<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_label_name">智能PP</string>
    <string name="phone_registe">手机号注册</string>
    <string name="item_a">消息</string>
    <string name="item_b">通讯录</string>
    <string name="item_c">集市</string>
    <string name="item_d">我的</string>
    <string name="bill">账单</string>
    <string name="all">全部</string>
    <string name="my_group">我的群</string>
    <string name="create_group">创建群</string>
    <string name="add_friend">添加好友</string>
    <string name="blockchain_group">区块链群</string>
    <string name="group">群聊</string>
    <string name="request_group">发起群聊</string>
    <string name="nike_in_group">我在群里的昵称</string>
    <string name="please_edit_note">请编辑群公告</string>
    <string name="nike_of_group">群备注</string>
    <string name="user_tag_name">备注</string>
    <string name="nike_of_group_visible">群聊的备注仅自己可见</string>
    <string name="mynike_in_group">我在群里的昵称</string>
    <string name="modify_nike_in_group_tip">昵称修改后，只会在此群内显示，群内成员都可以看见。</string>
    <string name="select_friends">选择联系人</string>
    <string name="contact_friends">联系人</string>
    <string name="pp_trans">PP转消费积分</string>
    <string name="phone_num">手机号</string>
    <string name="quantity">数量</string>
    <string name="already_confirm">已确定</string>
    <string name="quantity_">数量:%1$s%2$s</string>
    <string name="input_phone_num">填写手机号</string>
    <string name="text_isr_abnf_hint_2">\t上传内容为：\n\t#ABNF 1.0 gb2312;\n\tlanguage zh-CN;\n\tmode voice;\n\troot $main;\n\t$main = $place ;</string>
    <string name="xunfei_appid">appid=57df4b44</string>
    <string name="cancel">取消</string>
    <string name="accept">接受</string>
    <string name="no_balance">余额不足</string>
    <string name="no_net">网络不可用</string>
    <string name="talk_tip">请说话…</string>
    <string name="confirm">确定</string>
    <string name="take_photo">拍摄</string>
    <string name="all_image">所有图片</string>
    <string name="picture">图片</string>
    <string name="link">链接</string>
    <string name="note_voice">语音</string>
    <string name="seconds">秒</string>
    <string name="select_sex">选择性别</string>
    <string name="select_birthday">选择出生日期</string>
    <string name="take_picture">拍摄照片</string>
    <string name="preview">预览</string>
    <string name="preview_num">预览(%1$s)</string>
    <string name="done_num">完成(%1$s)</string>
    <string name="num_postfix">%1$d张</string>
    <string name="message_max_num">你最多可以选择%1$d张图片</string>
    <string name="pike_photo">从相册中选择</string>
    <string name="write">手写字体</string>
    <string name="send_current_friend">发送给当前好友(群)</string>
    <string name="send_other_friend">发送给其他好友(群)</string>
    <string name="hint_name">作者名字(必填)</string>
    <string name="hint_title">填写作文题目(必填)</string>
    <string name="input_title">作文题目</string>
    <string name="user_detail">个人信息</string>
    <string name="home">家</string>
    <string name="company">公司</string>
    <string name="school">学校</string>
    <string name="order_info">订单信息</string>
    <string name="order_detail">订单详情</string>
    <string name="back_to_market">返回集市</string>
    <string name="order_num">订单号码</string>
    <string name="order_num_">订单号</string>
    <string name="order_time">订单时间</string>
    <string name="order_modify">修改订单</string>
    <string name="to_post">  去发货  </string>
    <string name="modify_address">修改地址</string>
    <string name="create_address">添加收货地址</string>
    <string name="choose_address_tag">请选择标签</string>
    <string name="user_order_empty">您还没有购买过商品</string>
    <string name="genral_empty">暂时还没有内容哦</string>
    <string name="business_order_empty">还没有用户购买过您的商品</string>
    <string name="has_post">已发货</string>
    <string name="no_post">待发货</string>
    <string name="confirm_take_post">已签收</string>
    <string name="custom_confirm_take_post">买家已签收</string>
    <string name="order_manager">商家订单管理</string>
    <string name="logistics_num">物流单号</string>
    <string name="logistics_state">物流状态</string>
    <string name="logistics_info">物流信息</string>
    <string name="post_wares">发货</string>
    <string name="order_payed">已付款</string>
    <string name="order_go_pay">去付款</string>
    <string name="default_province">广东省</string>
    <string name="most_inupt_five_words">最多只能输入5个字</string>
    <string name="order_set_address">去设置地址</string>
    <string name="rmb">¥</string>
    <string name="enter">进店</string>
    <string name="consignee">收货人</string>
    <string name="consignee_">收件人姓名</string>
    <string name="username">姓名</string>
    <string name="phone">电话</string>
    <string name="adress_info">收货地址</string>
    <string name="input_logist_info">填写物流信息</string>
    <string name="logist_name_tip">快递公司名称:</string>
    <string name="hint_logist_name_tip">请填写快递公司名称(可不填)</string>
    <string name="logist_num_tip">快递单号:</string>
    <string name="hint_logist_num_tip">请填写快递单号</string>
    <string name="has_send_invoice_tip">请确定已开发票</string>
    <string name="clipboard_tip">已复制到剪贴板</string>
    <string name="down_app_tip">正在下载更新智能PP…</string>
    <string name="down_app_progress">已完成:%1$sM/%2$sM</string>
    <string name="confirm_post">确定发货</string>
    <string name="address">地址</string>
    <string name="unpost_state">未发货</string>
    <string name="consignee_address">收货地址</string>
    <string name="adress_detail">详细地址</string>
    <string name="logistics_name">物流公司</string>
    <string name="logistics_no">物流单号</string>
    <string name="pay_time">下单时间</string>
    <string name="post_time">发货时间</string>
    <string name="start_compose">开始写作文</string>
    <string name="hint_num">填写作文字数(必填)</string>
    <string name="input_num">作文字数</string>
    <string name="hint_grade">请选择年级(必选)</string>
    <string name="select_grade">选择年级</string>
    <string name="voice_input">语音输入</string>
    <string name="keyboard_input">键盘输入</string>
    <string name="hint_content">请输入作文正文(长按可粘贴文字)</string>
    <string name="start_modify">确定批改</string>
    <string name="modify">修改</string>
    <string name="start_talk">请开始说话</string>
    <string name="not_null_phone">手机号不能为空!</string>
    <string name="not_null_num">作文要求字数不能为空!</string>
    <string name="not_null_name">作者名字不能为空!</string>
    <string name="not_null_title">作文题目不能为空!</string>
    <string name="code_accept">出示二维码收消费积分</string>
    <string name="code_userinfo">二维码名片</string>
    <string name="code_group">群二维码</string>
    <string name="voice_switch">语言播报</string>
    <string name="message_disturb">消息免打扰</string>
    <string name="search_record">查找聊天记录</string>
    <string name="chat_record">聊天记录</string>
    <string name="message_top">消息置顶</string>
    <string name="recommend">推荐给好友</string>
    <string name="add_blacklist">加入黑名单</string>
    <string name="contact_blacklist">通讯录黑名单</string>
    <string name="scan_code_trans">扫二维码付消费积分</string>
    <string name="trans_to_friend">转消费积分给好友</string>
    <string name="scan_code">扫一扫</string>
    <string name="choose">选择</string>
    <string name="code_tip">无需加好友,扫二维码向我付消费积分</string>
    <string name="trans_score">消费积分转账</string>
    <string name="trans_score_title">转消费积分</string>
    <string name="trans_score_to">转消费积分给</string>
    <string name="select_currency">选择消费积分</string>
    <string name="score">消费积分</string>
    <string name="compose_score">分</string>
    <string name="identify_fail">识别失败!</string>
    <string name="all_redpacket_score">总消费积分</string>
    <string name="random_type">当前为拼手气红包</string>
    <string name="pp_redpacket">PP红包</string>
    <string name="start_redpacket">塞进红包</string>
    <string name="no_redpacket">手慢了,红包派完了</string>
    <string name="no_redpacket1">已被领完</string>
    <string name="look_detail">看看大家的手气</string>
    <string name="hint_redpacket">填写积分数</string>
    <string name="hint_redpacket_num">填写个数</string>
    <string name="wrong_redpacket_num">红包个数不对</string>
    <string name="save_in_dir">已保存到</string>
    <string name="scan_qr">已保存到</string>
    <string name="call_server">联系客服</string>
    <string name="call_user">联系买家</string>
    <string name="user_name">用户名</string>
    <string name="user_sex">性别</string>
    <string name="user_birth">生日</string>
    <string name="male">男</string>
    <string name="famale">女</string>
    <string name="unknown">未知</string>
    <string name="select_language">选择语音种类</string>
    <string name="your_language">您的语言:</string>
    <string name="tts_language">播报语音:</string>
    <string name="save">保存</string>
    <string name="redpacket_tip">提示:积分红包一经发出不可撤回</string>
    <string name="pp_redpacket_num">红包个数</string>
    <string name="all_members">本群共(%1$d)人</string>
    <string name="user_nick">昵称:%1$s</string>
    <string name="group_contain">包含:%1$s</string>
    <string name="group_nick">群聊名:%1$s</string>
    <string name="search_more">更多%1$s</string>
    <string name="splited">已领取</string>
    <string name="collect">收藏</string>
    <string name="try_to_say">试试这样说:</string>
    <string name="histroy">历史记录</string>
    <string name="talk_to">我要找XXX</string>
    <string name="to_compose">我要用文如其人</string>
    <string name="clear">清除</string>
    <string name="scanner">扫描二维码</string>
    <string name="no_permission">未授权权限</string>
    <string name="has_split_info">已领取%1$d/%2$d个,%3$d/%4$d消费积分</string>
    <string name="no_split_info">%1$d个红包,%2$s被抢光</string>
    <string name="default_des">恭喜发财,大吉大利</string>
    <string name="app_des">一款具备 AI 智能的虚拟机器人平台。</string>
    <string name="rc_plugins_contact">个人名片</string>
    <string name="rc_send">发送</string>
    <string name="rc_send_to">发送给 :</string>
    <string name="rc_message_to_friend">给朋友留言</string>
    <string name="rc_contact_group_member_count">%1$s(%2$d人)</string>
    <string name="rc_recommend_clause_to_others">你推荐了%1$s</string>
    <string name="rc_recommend_clause_to_me">%1$s向你推荐了%2$s</string>
    <string name="privacy_tips">欢迎使用智能PP!为了保护您的隐私和使用安全，请您务必仔细阅读我们的《用户协议》和《隐私条款》。在确认充分理解并同意后再开始使用此应用。感谢!</string>
    <string name="disag">发送失败？</string>
    <string name="send_sms_fail">发送失败？</string>
    <string name="delelte_record">确定要删除该记录吗？</string>
    <string name="grade">年级: </string>
    <string name="count">字数: </string>
    <string name="type">类型: </string>
    <string name="pin">拼</string>
    <string name="ge">个</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="exchange_now">立即兑换</string>
    <string name="buy_now">立即购买</string>
    <string name="all_score">消费积分余额:%1$d</string>
    <string name="des_format">年级：%1$s年级//得分：%2$s分//字数：%3$s</string>
    <string name="select_state">确定(%1$d)</string>
    <string name="delete_state">删除(%1$d)</string>
    <string name="has_score_num">当前拥有%1$d积分</string>
    <string name="most_exchange_num">当前最多可兑换%1$d%2$s</string>
    <string name="least_exchange_num">最少兑换%1$d%2$s</string>
    <string name="exchange_detail">您已兑换%1$s（%2$s）%3$d%4$s</string>
    <string name="all_exchange_score">合计:%1$d积分</string>
    <string name="has_score">当前拥有:%1$d积分</string>
    <string name="all_exchange_rmb">合计:%1$d</string>
    <string name="all_format_rmb">合计:¥%1$s</string>
    <string name="all_pay_score">实付:%1$d积分</string>
    <string name="compose_title">文如其人</string>
    <string name="compose_tips1">写作文测性格</string>
    <string name="compose_tips2">写好作文提交批改后,能根据作文内容测出作者性格。</string>
    <string name="fund_tips_title">温馨提示</string>
    <string name="fund_tips_content">财富功能由Bitcaps提供,开通财富功能,你的私人信息会提供给Bitcaps,是否同意Bitcaps的服务协议?</string>
    <string name="fund_agreement">《服务协议》</string>
    <string name="privacy">《隐私条款》</string>
    <string name="agree">同意</string>
    <string name="disagree">不同意</string>
    <string name="invoice_type">发票类型</string>
    <string name="invoice_content">发票内容</string>
    <string name="invoice_title_type">抬头类型</string>
    <string name="invoice_title_name">抬头名称</string>
    <string name="invoice_price">开票金额</string>
    <string name="invoice_email">收票人邮箱</string>
    <string name="tax_num">纳税人识别号</string>
    <string name="wares_detail">商品明细</string>
</resources>