<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/invoice_type"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="@dimen/invoice_width_b"
                android:layout_height="wrap_content"
                android:text="@string/invoice_type"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/voice_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_text333_color"
                android:textSize="16sp"
                android:layout_marginLeft="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            >
            <TextView
                android:layout_width="@dimen/invoice_width_b"
                android:layout_height="wrap_content"
                android:text="@string/invoice_content"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/invoice_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_text333_color"
                android:text="@string/wares_detail"
                android:textSize="16sp"
                android:layout_marginLeft="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            >
            <TextView
                android:layout_width="@dimen/invoice_width_b"
                android:layout_height="wrap_content"
                android:text="@string/invoice_title_type"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/title_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_text333_color"
                android:textSize="16sp"
                android:layout_marginLeft="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            >
            <TextView
                android:layout_width="@dimen/invoice_width_b"
                android:layout_height="wrap_content"
                android:text="@string/invoice_title_name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/title_type_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_text333_color"
                android:textSize="16sp"
                android:layout_marginLeft="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tax_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            >
            <TextView
                android:layout_width="@dimen/invoice_width_b"
                android:layout_height="wrap_content"
                android:text="@string/tax_num"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/company_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_text333_color"
                android:textSize="16sp"
                android:layout_marginLeft="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            >
            <TextView
                android:layout_width="@dimen/invoice_width_b"
                android:layout_height="wrap_content"
                android:text="@string/invoice_price"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/invoice_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_text333_color"
                android:textSize="16sp"
                android:layout_marginLeft="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            >
            <TextView
                android:layout_width="@dimen/invoice_width_b"
                android:layout_height="wrap_content"
                android:text="@string/invoice_email"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/invoice_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_text333_color"
                android:textSize="16sp"
                android:layout_marginLeft="5dp"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>