<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/back_btn"
            android:layout_width="@dimen/back_width"
            android:layout_height="match_parent"
            android:background="@drawable/general_tran_gray_btn_selector">

            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:background="@mipmap/back_icon" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/compose_title"
            android:textColor="@color/gray_text333_color"
            android:textSize="18sp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_bg_color"
        android:layout_below="@+id/top_bar"
        />
    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/top_bar"
        android:layout_marginTop="35dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:visibility="gone"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/zuoz"
                android:layout_gravity="center_vertical"
                />
            <EditText
                android:id="@+id/author_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="16sp"
                android:textColor="@color/gray_text333_color"
                android:hint="@string/hint_name"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compose_tips1"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compose_tips2"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@color/gray_text_color"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_grade"
                android:textColor="@color/gray_text333_color"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp">
            <Spinner
                android:id="@+id/spinner_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray_bg_color"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_title"
                android:textColor="@color/gray_text333_color"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp">
                <EditText
                    android:id="@+id/compose_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textSize="16sp"
                    android:textCursorDrawable="@drawable/rc_shape_cursor_color"
                    android:textColor="@color/gray_text333_color"
                    android:hint="@string/hint_title"
                    android:layout_centerVertical="true"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray_bg_color"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_num"
                android:textColor="@color/gray_text333_color"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp">
                <EditText
                    android:id="@+id/charno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textSize="16sp"
                    android:textCursorDrawable="@drawable/rc_shape_cursor_color"
                    android:textColor="@color/gray_text333_color"
                    android:hint="@string/hint_num"
                    android:inputType="number"
                    android:layout_centerVertical="true"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray_bg_color"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/confirm"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:layout_below="@+id/content_layout"
        android:text="@string/start_compose"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/general_red_theme_corner5_selector"
        />
    <TextView
        android:id="@+id/cancel"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:layout_below="@+id/confirm"
        android:text="@string/cancel"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/gray_text_color"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/general_gray_btn_selector"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/collect"
            android:text="@string/collect"
            android:textColor="@color/theme_color"
            android:textSize="15sp"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="@color/theme_color"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/histroy"
            android:text="@string/histroy"
            android:textColor="@color/theme_color"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            />
    </LinearLayout>
</RelativeLayout>