<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:background="@drawable/background_white">
       <!-- <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            />-->
        <TextView
            android:id="@+id/tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:textSize="20sp"
            android:text="@string/fund_tips_title"
            android:textColor="@color/gray_text333_color"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="25dp"
            android:textSize="16sp"
            android:text="@string/fund_tips_content"
            android:textColor="@color/gray_text333_color"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/left_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/agree"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/general_red_theme_corner5_selector"
                android:textSize="16sp"
                />
            <TextView
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                />
            <TextView
                android:id="@+id/right_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:text="@string/disagree"
                android:gravity="center"
                android:textColor="@color/gray_text333_color"
                android:background="@drawable/general_gray_btn_selector"
                android:textSize="16sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center_horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fund_agreement"
                android:text="@string/fund_agreement"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/theme_color"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/privacy"
                android:text="@string/privacy"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/theme_color"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>