<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#f5f5f5"
        >
    <TextView
        android:id="@+id/left_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/helptext_color"
        />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/gray_text333_color"
        />
    <TextView
        android:id="@+id/right_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/second_blk_text"
        />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/option1"
        android:text="@string/male"
        android:textColor="@color/white"
        android:background="@drawable/general_red_theme_corner20_selector"
        android:paddingRight="55dp"
        android:paddingLeft="55dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="@dimen/text_size_16"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/option2"
        android:text="@string/famale"
        android:textColor="@color/second_blk_text"
        android:background="@drawable/background_gray_corner20"
        android:paddingRight="55dp"
        android:paddingLeft="55dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="@dimen/text_size_16"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        />
</LinearLayout>